--- a/style.css
+++ b/style.css
@@ -7,12 +7,6 @@
     --text-color: #fafbfb;
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 html, body {
     scroll-behavior: smooth;
 }
@@ -32,15 +26,12 @@ img {
 }
 
 .search-city {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    display: grid;
+    place-items: center;
 }
 
 .search-city .enter-search {
-    width: 350px;
+    width: 250px;
     height: 40px;
     margin-top: 1rem;
     position: relative;
@@ -52,7 +43,7 @@ img {
     border: none;
     outline: none;
     background: var(--text-color);
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 50px;
     padding: 0 60px 0 20px;
 }
@@ -63,13 +54,13 @@ img {
     right: -80px;
     transform: translateY(-50%);
     height: 40px;
-    width: 80px;
+    width: 50px;
     color: var(--text-color);
     background: #0000ea;;
     line-height: 50px;
     font-size: 20px;
     text-align: center;
-    border-radius: 30px;
+    border-radius: 50px;
     cursor: pointer;
 }
 
@@ -92,6 +83,7 @@ img {
 
 .timezone {
     font-size: 1rem;
+    font-weight: bold;
     color: #0000ea;
 }
 
