--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     --text-color: #fafbfb;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, body {
     scroll-behavior: smooth;
 }
@@ -20,21 +26,46 @@ img {
     width: 250px;
 }
 
+.navbar {
+    background: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.navbar .nav-container {
+    display: flex;
+    text-align: center;
+}
+
+.navbar a {
+    color: var(--text-color);
+}
+
 .heading {
     background: var(--secondary-color);
     color: var(--primary-color);
 }
 
+/*
 .search-city {
     display: grid;
     place-items: center;
+}
+*/
+
+.search-city {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    max-width: 100%;
 }
 
 .search-city .enter-search {
     width: 250px;
     height: 40px;
     margin-top: 1rem;
-    position: relative;
 }
 
 .enter-search input {
@@ -44,26 +75,23 @@ img {
     outline: none;
     background: var(--text-color);
     font-size: 14px;
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 0 60px 0 20px;
 }
 
 .enter-search .search-button {
-    position: absolute;
-    top: 50%;
-    right: -80px;
-    transform: translateY(-50%);
-    height: 40px;
-    width: 50px;
-    color: var(--text-color);
-    background: #0000ea;;
-    line-height: 50px;
-    font-size: 20px;
+    height: 30px;
+    width: 100px;
+    color: var(--primary-color);
+    background: #0000ea;
     text-align: center;
-    border-radius: 50px;
+    border-radius: 20px;
     cursor: pointer;
+    letter-spacing: 1px;
 }
 
+
+/* Weather info container */
 .container {
     display: flex;
     flex-direction: column;
@@ -101,4 +129,35 @@ img {
     font-weight: bold;
     letter-spacing: 1px;
     color: #0000ea;
+}
+
+@media screen and (max-width) {
+    img {
+        width: 200px;
+    }
+
+    .city {
+        font-size: 2rem;
+    }
+
+    .timezone {
+        font-size: 0.5rem;
+    }
+
+    .temperature {
+        font-size: 3rem
+    }
+
+    .description {
+        font-size: 0.6rem;
+    }
+
+    .search-city {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .enter-search .search-button {
+        margin-top: 5px;
+    }
 }
